	PR driver/47244 	* gcc.c (PLUGIN_COND): Update to disable plugin unless -flto is used. 	(PLUGIN_COND_CLOSE): New macro. 	(LINK_COMMAND_SPEC): Update to use PLUGIN_COND_CLOSE.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@168717 138bc75d-0d04-0410-961f-82ee72b054a4